--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -78,5 +78,11 @@
             android:layout_height="60dp"
             android:text="forward2NewBookReceiveActivity" />
 
+        <Button
+            android:id="@+id/main_test_tcp"
+            android:layout_width="300dp"
+            android:layout_height="60dp"
+            android:text="test_tcp" />
+
     </LinearLayout>
 </ScrollView>
